--- a/cst438_register/src/main/resources/application.properties
+++ b/cst438_register/src/main/resources/application.properties
@@ -3,10 +3,13 @@ server.servlet.session.persistent=false
 
 # gradebook service
 gradebook.url = http://localhost:8081
-gradebook.service = default
+#gradebook.service = default
+gradebook.service = MQ
 # registration service
 registration.url = http://localhost:8080
 registration.service = default
+
+spring.rabbitmq.host = localhost
 
 # database properties
 spring.datasource.url = jdbc:mysql://localhost:3306/register
