--- a/cst438_register/src/main/resources/application.properties
+++ b/cst438_register/src/main/resources/application.properties
@@ -9,7 +9,10 @@ gradebook.service = default
 registration.url = http://localhost:8080
 registration.service = default
 
-spring.rabbitmq.host = localhost
+# spring.rabbitmq.host = localhost
+
+# URL for redirect back to React after successful login
+frontend.post.login.url = http://localhost:3000/semester
 
 # database properties
 spring.datasource.url = jdbc:mysql://localhost:3306/register
